# ComfyUI-MachinePaintingNodes

./: .gitignore  LICENSE  README.md  __init__.py  analysis_view.py  boolean.py  boolean_input_value_switch.py  boolean_master_switch.py  boolean_switch_value_output.py  boolean_utils.py  brightness_contrast_adjust.py  channel_mask_pro.py  color_adjust_blend.py  color_blend.py  color_match_blend.py  curves_adjust_pro.py  dynamic_value_range.py  image_blend_pro.py  lut_apply.py  mega_slider.py  pyproject.toml  remove_background.py  requirements.txt  seed_boolean_lock.py  seed_lock.py  selective_color_pro.py  show_text.py  show_value.py  text_notes.py  text_string.py  tonal_adjust.py  zimage_latent.py
js/: curves_widget.js  mega_slider.js  selective_color.js  show_text.js  show_value.js  view_nodes.js
luts/: Cinematic_Teal_Orange.cube  Cool_Tone.cube  High_Contrast.cube  Vintage_Fade.cube  Warm_Tone.cube
