[project]
name = "comfyui-machinepainting-nodes"
description = "Professional color grading, mask tools, and utilities for ComfyUI. Includes Curves, Levels, LUT Apply, Selective Color, Channel Masks, Background Removal, Boolean utilities, and more."
version = "2.0.2"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "numpy", "rembg"]

[project.urls]
Repository = "https://github.com/machinepainting/ComfyUI-MachinePaintingNodes"

[tool.comfy]
PublisherId = "machinepainting"
DisplayName = "MachinePainting Nodes"
Icon = ""
